refactor: Reduce cognitive complexity in SuspensableGetCharInsertion